--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -8,6 +8,10 @@
                 <a href="/products"><i class="fa fa-product-hunt"></i> Product </a>
             </li>
             <li>
+                <a href="/accounts"><i class="fa fa-archive"></i> Accounts </a>
+                
+            </li>
+            <li>
                 <a href="/recipe-book"> <i class="fa fa-list"></i> Recipe Book </a>
             </li>
             <li>
