update send email

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,6 @@
 <template name="Header">
     <header>
-        <h1>CRM </h1>
+        <h1>AGNUS CRM </h1>
         {{> loginButtons}}
     </header>
 </template>
