User Managment and chouse user on create Record's

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -4,6 +4,12 @@
     <main>
         <div class="billboard">
             <h2>Organize Yout Meals</h2>
+
+            
         </div>
+
+        
     </main>
+
+    {{> atForm state='signUp'}}
 </template>
