--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -11,6 +11,9 @@
                 <a href="/accounts"><i class="fa fa-archive"></i> Accounts </a>
                 
             </li>
+            {{#if 1 = 0 }}
+            
+            {{else}}
             <li>
                 <a href="/recipe-book"> <i class="fa fa-list"></i> Recipe Book </a>
             </li>
@@ -20,6 +23,7 @@
             <li>
                 <a href="/shopping-list"> <i class="fa fa-shopping-cart"></i> Shopping List </a>
             </li>
+            {{/if}}
         </ul>
     </nav>
 </template>
