--- a/styles.styl
+++ b/styles.styl
@@ -286,7 +286,7 @@ input, select, textarea
     background #FFF
     padding 0 20px 20px
     margin-bottom 20px
-    position relative
+    position unset #relative
     z-index 1
     shadow-level(1)
     trans()
