--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -4,20 +4,16 @@
     
     {{> Header}}
 
-    <div class="row">{{> Breadcrumb}}    </div>
+    
 
-    <div class="container-fluid">
-        <div class="row">
-            {{> SideNav}}
-            <main class="col-md-9 col-xs-11 p-l-2 p-t-2">
-                <a href="#sidebar" data-toggle="collapse"><i class="fa fa-navicon fa-lg"></i></a>
-                <hr>
-                
-                {{> Template.dynamic template=main}}
-                
-                
+    {{> SideNav}}
 
-            </main>
+    <div class="container">
+        <div class="cl s12">
+            
+            {{> Template.dynamic template=main}}
+
+            
         </div>
         
     </div>
@@ -28,6 +24,7 @@
             
             <div id="footer">Teste</div>
     </footer>
-
+    
+    <div class="row">{{> Breadcrumb}}    </div>
 </template>
 
