--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -9,6 +9,7 @@
 
         <li><a href="/"><i class="material-icons right">home</i> <span class="hidden-sm-down">Home</span> </a></li>
         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
+        <li><a href="/familys"><i class="material-icons right">dehaze</i> <span class="hidden-sm-down">Family</span></a></li>
         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
         
          
