--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -1,5 +1,11 @@
 <template name="SideNav">
-    <ul id="slide-out" class="side-nav">
+    <ul id="nav-mobile" class="side-nav fixed static" style="transform: translateX(0%);">
+            
+        <li class="logo"><a id="logo-container" href="/" class="brand-logo">
+                <object id="front-page-logo" type="image/svg+xml" data="res/materialize.svg">Your browser does not support SVG</object>
+            </a>
+        </li>
+
         <li class="search">
             <div class="search-wrapper card">
                 <input id="search"><i class="material-icons">search</i>
@@ -11,6 +17,7 @@
         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
         <li><a href="/familys"><i class="material-icons right">dehaze</i> <span class="hidden-sm-down">Family</span></a></li>
         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
+        <li><a href="/customers"><i class="material-icons right">accounts</i> <span class="hidden-sm-down">Customers</span></a></li>
         
          
     </ul>
