--- a/client/main.css
+++ b/client/main.css
@@ -16,3 +16,17 @@ body {
     font-weight: normal;
     color: rgba(0, 0, 0, 0.87);
 }
+
+.fixed-announcement {
+    position: relative;
+    height: 48px;
+    width: 100%;
+    z-index: 999;
+}
+
+.fixed-announcement .announcement {
+    position: absolute;
+    height: inherit;
+    width: inherit;
+    background-color: rgb(92, 87, 87);
+}
