--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -3,6 +3,14 @@
     {{> SideNav}}
     
     <main>
+        <div class="announcement">
+            
+            <div class="container">Version 1.0 is coming soon! See this
+            <a href="https://github.com/gmahota/AGNUS_CRM"> GitHub post</a> 
+            for more information.
+          </div>
+        </div>
+        
         <div class="billboard">
             <h2>Organize Yout Meals</h2>
         </div>
@@ -46,4 +54,5 @@
 
 
     </main>
+    {{> Footer}}
 </template>
