--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,14 +1,20 @@
 <template name="MainLayout">
 
         {{> Header}}
-    {{> SideNav}}
+        {{> SideNav}}
     <main>
+        
+        <div class="announcement">
+                                
+                <div class="container">Version 1.0 is coming soon! See this
+                        <a href="https://github.com/gmahota/AGNUS_CRM"> GitHub post</a> 
+                                for more information.
+                              </div>
+                            </div>
+        
         <div class="container">
-                
-                {{> Template.dynamic template=main}}
-                         
+                {{> Template.dynamic template=main}}           
         </div>
-            
     </main>
     
 
@@ -18,5 +24,7 @@
     </footer>
     
     <div class="row">{{> Breadcrumb}}    </div>
+
+    {{> Footer}}
 </template>
 
