--- a/client/main.css
+++ b/client/main.css
@@ -1,32 +1,42 @@
-header, main, footer {
-    padding-left: 300px;
-}
 
 .container {
-     padding-right: auto; 
-     padding-left: auto; 
-     width: auto;
-    /* margin-right: auto; */
-    /* margin-left: auto; */
-}
-
-body {
-    line-height: 1.5;
-    font-family: Roboto, sans-serif;
-    font-weight: normal;
-    color: rgba(0, 0, 0, 0.87);
-}
-
-.fixed-announcement {
-    position: relative;
-    height: 48px;
-    width: 100%;
-    z-index: 999;
-}
-
-.fixed-announcement .announcement {
-    position: absolute;
-    height: inherit;
-    width: inherit;
-    background-color: rgb(92, 87, 87);
-}
+    padding-right: auto; 
+    padding-left: auto; 
+    width: auto;
+   /* margin-right: auto; */
+   /* margin-left: auto; */
+  }
+  
+  body {
+   line-height: 1.5;
+   font-family: Roboto, sans-serif;
+   font-weight: normal;
+   color: rgba(0, 0, 0, 0.87);
+  }
+  
+  .fixed-announcement {
+   position: relative;
+   height: 48px;
+   width: 100%;
+   z-index: 999;
+  }
+  
+  .fixed-announcement .announcement {
+   position: absolute;
+   height: inherit;
+   width: inherit;
+   background-color: rgb(92, 87, 87);
+  }
+  
+  .nav-wrapper{
+   background: #524763;
+  }
+  
+  header a:focus, a:hover {
+   color:white;
+   text-decoration: none;
+  }
+  
+  nav.nav-extended {
+   background: #524763;
+  }
