--- a/styles.styl
+++ b/styles.styl
@@ -1,4 +1,4 @@
-/*
+
 normalize-css()
  
 // Material Shadows
@@ -21,6 +21,7 @@ shadow-level(l = 1)
 // Common Transition
 trans($sec = 0.3s)
     transition: all $sec ease
+
 // Grid
 $xsmall = 340px
 $small = 500px
@@ -73,30 +74,6 @@ html
  
 *, *:before, *:after
     box-sizing: inherit
- 
-body
-    background light-grey
-    padding: 70px 0 150px
- 
-header
-    color #FFF
-    background: purp
-    padding 20px
-    fixed top left
-    width 100%
-    height 70px
-    z-index: z.header
-    shadow-level(2)
-    clearfix()
-    h1
-        margin 0
-        font-size 1.6em
-        float left
-    .login-buttons-dropdown-align-
-        float right
-        a
-            color #FFF
-            text-decoration none
  
 p
     color #333
@@ -255,8 +232,8 @@ input, select, textarea
  
 .side-nav
     fixed bottom left
-    height 100px
-    width 100%
+    height 100%
+    width 190px;
     overflow hidden
     background dark-purp
     color #FFF
@@ -370,4 +347,4 @@ input, select, textarea
 
 .myFilter
     visibility hidden
-    */
+    
