--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,28 +1,65 @@
 <template name="Header">
         
     <header>
-              
-        <div class="announcement">
-                      
-                <div class="container">Version 1.0 is coming soon! See this
-                    <a href="https://github.com/gmahota/AGNUS_CRM"> GitHub post</a> 
-                    for more information.
-                    <div class="rigth">{{> loginButtons}}</div> 
-                    
-                </div>
-                
-        </div>
-                  
-        
-        <nav>
+
+        <nav class="nav-extended">
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo">AGNUS CRM</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    
-                </ul>
+                <a href="#" class="brand-logo">AGNUS CRM</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse">
+                    <i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li>
+                            <a href="/">
+                                    <i class="material-icons right">home</i> 
+                                    <span class="hidden-sm-down">Home</span> 
+                                </a>    
+                        </li>
+                        <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
+                        <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
+                        <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
+                        <li><a href="/customers"><i class="material-icons right">accounts</i> <span class="hidden-sm-down">Customers</span></a></li>
+                        
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li>
+                            <a href="/">
+                                <i class="material-icons right">home</i> 
+                                <span class="hidden-sm-down">Home</span> 
+                            </a>
+                        </li>
+                        <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
+                        <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
+                        <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
+                        <li><a href="/customers"><i class="material-icons right">accounts</i> <span class="hidden-sm-down">Customers</span></a></li>
+                        
+                    </ul>
             </div>
+
+            
+
+
+
+
+                <div class="nav-content">
+                      <ul class="tabs tabs-transparent">
+                        <li class="tab"><a href="#Vendas">Settings</a></li>
+                        <li class="tab"><a class="active" href="#test2">Reports</a></li>
+                        <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
+                        <li class="tab"><a href="#test4">Suport US</a></li>
+                        <li class="tab rigth"><div >{{> loginButtons}}</div></li>
+                        
+                    </ul>
+                      
+                </div>
         </nav>
+
+        <!-- <div id="Vendas" class="col s12">Vendas</div>
+        <div id="test2" class="col s12">Test 2</div>
+        <div id="test3" class="col s12">Test 3</div>
+        <div id="test4" class="col s12">Test 4</div>       -->
+        
     </header>
+    
     
     
 </template>
