--- a/styles.styl
+++ b/styles.styl
@@ -235,7 +235,7 @@ input, select, textarea
     height 100%
     width 190px;
     overflow hidden
-    background dark-purp
+    #background dark-purp
     color #FFF
     z-index: z.header
     shadow-level(2)
