add file managament

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -17,7 +17,7 @@
                         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
                         <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
-                        <li><a href="/customers"><i class="material-icons right">accounts</i> <span class="hidden-sm-down">Customers</span></a></li>
+                        <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
                         
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
@@ -30,14 +30,10 @@
                         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
                         <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
-                        <li><a href="/customers"><i class="material-icons right">accounts</i> <span class="hidden-sm-down">Customers</span></a></li>
+                        <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
                         
                     </ul>
             </div>
-
-            
-
-
 
 
                 <div class="nav-content">
