--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,7 +1,6 @@
 <template name="Header">
         
     <header>
-
         <nav class="nav-extended">
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">AGNUS CRM</a>
@@ -15,7 +14,7 @@
                                 </a>    
                         </li>
                         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
-                        <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
+                        
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
                         <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
                         
@@ -28,7 +27,6 @@
                             </a>
                         </li>
                         <li><a href="/products"><i class="material-icons right">local_parking</i> <span class="hidden-sm-down">Product</span></a></li>
-                        <li><a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
                         <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
                         
@@ -38,7 +36,7 @@
 
                 <div class="nav-content">
                       <ul class="tabs tabs-transparent">
-                        <li class="tab"><a href="#Vendas">Settings</a></li>
+                        <li class="tab"><a href="/settings">Settings</a></li>
                         <li class="tab"><a class="active" href="#test2">Reports</a></li>
                         <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
                         <li class="tab"><a href="#test4">Suport US</a></li>
