--- a/client/partials/DashboardProducts.html
+++ b/client/partials/DashboardProducts.html
@@ -1,4 +1,9 @@
 <template name="Dashboard">
+        
+        
+        <div class="parallax-container">
+            <div class="parallax"><img src="/background.png"></div>
+        </div>
     
         <div class="container">
             <div class="row">
