--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -3,8 +3,8 @@
     <header>
         <nav class="nav-extended">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">AGNUS CRM</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse">
+                <a href="/" class="brand-logo">AGNUS CRM</a>
+                <a href="/" data-activates="mobile-demo" class="button-collapse">
                     <i class="material-icons">menu</i></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li>
