--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -16,7 +16,7 @@
                         
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
                         <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
-                        
+                        <li >{{> loginButtons}}</li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
                         <li>
@@ -27,6 +27,7 @@
                         </li>
                         <li><a href="/accounts"><i class="material-icons right">account_circle</i> <span class="hidden-sm-down">Accounts</span></a></li>
                         <li><a href="/customers"><i class="material-icons right">group</i> <span class="hidden-sm-down">Customers</span></a></li>
+                        <li >{{> loginButtons}}</li>
                         
                     </ul>
             </div>
@@ -38,7 +39,6 @@
                         <li class="tab"><a class="active" href="#test2">Reports</a></li>
                         <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
                         <li class="tab"><a href="#test4">Suport US</a></li>
-                        <li class="tab rigth"><div >{{> loginButtons}}</div></li>
                         
                     </ul>
                       
