Add Appoimento on Account Dashboard

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -2,7 +2,13 @@
     {{> Header}}
     {{> SideNav}}
     
-    {{> Dashboard}}
-    
+    {{#if currentUser}}  
+        {{> DashBoard_Account}} 
+    {{/if}}  
+
+    {{#if noUser}}  
+        {{> Dashboard}} 
+    {{/if}}  
+
     {{> Footer}}
 </template>
