--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,6 +1,9 @@
 <template name="MainLayout">
 
-        {{> Header}} {{> SideNav}}
+        {{> Header}} 
+        
+        {{> SideNav}}
+        
         <main>
 
                 <div class="announcement">
