--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -37,19 +37,13 @@
                       <ul class="tabs tabs-transparent">
                         <li class="tab"><a href="/settings">Settings</a></li>
                         <li class="tab"><a class="active" href="#test2">Reports</a></li>
-                        <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
+                        <li class="tab"><a href="/qoutas">Qoutas</a></li>
                         <li class="tab"><a href="#test4">Suport US</a></li>
                         
                     </ul>
                       
                 </div>
         </nav>
-
-        <!-- <div id="Vendas" class="col s12">Vendas</div>
-        <div id="test2" class="col s12">Test 2</div>
-        <div id="test3" class="col s12">Test 3</div>
-        <div id="test4" class="col s12">Test 4</div>       -->
-        
     </header>
     
     
