--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -38,6 +38,7 @@
                         <li class="tab"><a href="/settings">Settings</a></li>
                         <li class="tab"><a class="active" href="#test2">Reports</a></li>
                         <li class="tab"><a href="/qoutas">Qoutas</a></li>
+                        <li class="tab"><a href="/invoices">invoices</a></li>
                         <li class="tab"><a href="#test4">Suport US</a></li>
                         
                     </ul>
