--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,14 +1,17 @@
 <template name="HomeLayout">
-    {{> Header}}
-    {{> SideNav}}
+    {{> Header}} {{> SideNav}} {{#if currentUser}} {{> DashBoard_Account}} {{else}}
     
-    {{#if currentUser}}  
-        {{> DashBoard_Account}} 
-    {{else}}
-        
-        {{> Dashboard}} 
-    {{/if}}  
+    <div class="container" style="padding-top:30px">
+        <div class="row">
+
+            <div class="col s5 offset-s4 z-depth-1">
+                {{> atForm}}
+            </div>
+        </div>
+    </div>
 
 
-    {{> Footer}}
+
+    <!-- {{> Dashboard}}  -->
+    {{/if}} {{> Footer}}
 </template>
