--- a/client/partials/Footer.html
+++ b/client/partials/Footer.html
@@ -1,4 +1,4 @@
-<template name="Footer">
+<template name="Footer_NewVersion">
     <footer class="page-footer">
         <div class="container">
             <div class="row">
@@ -29,4 +29,31 @@
                   </div>
                 </div>
               </footer>
+</template>
+
+<template name="Footer">
+  <footer class="page-footer" >
+      <div class="container">
+          <div class="row">
+
+
+            <div class="col s8 offset-s2">
+                <div class="card horizontal" style="background-color: none;">
+                  <div class="card-image">
+                    <img src="/presidente.png">
+                  </div>
+                  <div class="card-stacked">
+                    <div class="card-content">
+                      <p>"Tal como os combatentes fizeram no passado, devemos nós também estar preparados para operar mudanças e continuar a assumir a liderança das transformações que se impõem no século XXI"
+                        </p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">Camarada Filipe Jacinto Nyusi</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+    </footer>
 </template>
