--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,4 +1,4 @@
-<template name="Header">
+<template name="Header_New">
 
     <header>
         <nav class="nav-extended">
@@ -70,7 +70,7 @@
 
 </template>
 
-<template name="Header_OLD">
+<template name="Header">
 
     <header>
         <nav class="nav-extended">
