add bank managment

--- a/private/custom/main.scss
+++ b/private/custom/main.scss
@@ -1,5 +1,5 @@
 // import all
-@import '{}/node_modules/bootstrap/scss/bootstrap.scss'
+//@import '{}/node_modules/bootstrap/scss/bootstrap.scss'
 
 // or some components from '{}/node_modules/bootstrap/scss/' folder
 
