--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,5 +1,5 @@
 <template name="HomeLayout">
-    {{> Header_Home}} {{> SideNav}} {{#if currentUser}} {{> DashBoard_Account}} {{else}}
+    {{> Header}} {{> SideNav}} {{#if currentUser}} {{> DashBoard_Account}} {{else}}
 
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
