--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -3,16 +3,14 @@
         {{> Header}} 
         {{> SideNav}}
 
-
-
         <main>
 
                 <div class="announcement">
 
-                        <div class="container">Version 1.0 is coming soon! See this
+                        <!-- <div class="container">Version 1.0 is coming soon! See this
                                 <a href="https://github.com/gmahota/AGNUS_CRM"> GitHub post</a>
                                 for more information.
-                        </div>
+                        </div> -->
                 </div>
                 <div class="container">
                         {{> Template.dynamic template=main}}
