--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -70,7 +70,7 @@
 
 </template>
 
-<template name="Header">
+<template name="Header_OLD">
 
     <header>
         <nav role="navigation">
@@ -120,13 +120,13 @@
     </header>
 </template>
 
-<template name="Header_Home">
+<template name="Header">
 
     <header>
         <nav class="white" role="navigation">
 
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">SISSA</a>
+                <a id="logo-container" href="/" class="brand-logo">SISSA</a>
                 <ul class="right hide-on-med-and-down">
                     <li>
                         {{> loginButtons}}
