--- a/private/custom/main.css
+++ b/private/custom/main.css
@@ -1,10 +1,8 @@
-
+/* 
 .container {
   padding-right: auto; 
   padding-left: auto; 
   width: auto;
- /* margin-right: auto; */
- /* margin-left: auto; */
 }
 
 body {
@@ -45,4 +43,4 @@ page-footer {
   padding-top: 20px;
   color: none;
   background-color: #ee6e73;
-}
+} */
